# katsuyo-text

./: LICENSE  README.md  pyproject.toml
katsuyo_text/: katsuyo.py  katsuyo_text.py  katsuyo_text_appendant_detector.py  katsuyo_text_builder.py  katsuyo_text_detector.py  katsuyo_text_helper.py  katsuyo_text_source_detector.py  sentence_converter.py  spacy_katsuyo_text_detector.py  spacy_sentence_converter.py
tests/: conftest.py  test_katsuyo_text.py  test_katsuyo_text_appendant_detector.py  test_katsuyo_text_detector.py  test_katsuyo_text_helper.py  test_katsuyo_text_source_detector.py  test_sentence_converter.py  test_spacy_katsuyo_text_detector_appendant.py  test_spacy_katsuyo_text_detector_source.py  test_spacy_sentence_converter.py
