[tool.poetry]
name = "katsuyo-text"
version = "0.1.1"
description = "A Japanese conjugation form converter"
authors = ["Sadahiro YOSHIKAWA"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
# Fixed ja-ginza version for safe testing
ja-ginza = "5.1.2"
flake8 = "^5.0.4"
mypy = "^0.982"
black = "^22.10.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
